--- a/src/app/toolbar/layouts/vertical-navigation/toolbar.html
+++ b/src/app/toolbar/layouts/vertical-navigation/toolbar.html
@@ -23,13 +23,13 @@
                            translate translate-attr-aria-label="TOOLBAR.USER_SETTINGS">
                     <div layout="row" layout-align="space-between center">
                         <div class="avatar-wrapper">
-                            <img md-menu-align-target class="avatar" src="assets/images/avatars/profile.jpg">
+                            <img md-menu-align-target class="avatar" ng-src="{{vm.currentUser.avatar}}">
                             <md-icon md-font-icon ng-class="vm.userStatus.icon"
                                      ng-style="{'color': vm.userStatus.color }"
                                      class="icon status s16">
                             </md-icon>
                         </div>
-                        <span class="username" hide-xs>John Doe</span>
+                        <span class="username" hide-xs> {{vm.currentUser.fullname}} </span>
                         <md-icon md-font-icon="icon-chevron-down"
                                  class="icon s16" hide-xs></md-icon>
                     </div>
@@ -68,6 +68,11 @@
                     </md-menu-item>
 
                     <md-menu-divider></md-menu-divider>
+
+                    <md-menu-item class="md-indent">
+                        <md-icon md-font-icon="icon-lock-outline" class="icon"></md-icon>
+                        <md-button ng-click="vm.lock()">Lock</md-button>
+                    </md-menu-item>
 
                     <md-menu-item class="md-indent">
                         <md-icon md-font-icon="icon-logout" class="icon"></md-icon>
