--- a/src/app/main/auth/login/login.jade
+++ b/src/app/main/auth/login/login.jade
@@ -4,7 +4,7 @@
       .logo.md-accent-bg
         span F
       .title(translate='LOGIN.TITLE' ng-hide='vm.invalidUser') Log in to your account
-      .title.is-invalid(translate='LOGIN.INVALID' ng-show='vm.invalidUser') Email or password error!
+      .title.is-invalid(translate='LOGIN.INVALID' ng-show='vm.invalidUser') Username or password error!
 
         div(ng-messages='loginForm.password.$error', ng-show='loginForm.password.$touched', role='alert')
           div(ng-message='required')
@@ -13,12 +13,10 @@
       form(name='loginForm', novalidate='')
         
         md-input-container.md-block(md-no-float='')
-          input(type='email', name='email', ng-model='vm.form.email', placeholder='Email', translate='', translate-attr-placeholder='LOGIN.EMAIL', ng-pattern='/^.+@.+\..+$/', required='')
-          div(ng-messages='loginForm.email.$error', ng-show='loginForm.email.$touched', role='alert', multiple='')
+          input(name='username', ng-model='vm.form.username', placeholder='username', translate='', translate-attr-placeholder='LOGIN.username', required='')
+          div(ng-messages='loginForm.username.$error', ng-show='loginForm.username.$touched', role='alert', multiple='')
             div(ng-message='required')
-              span(translate='LOGIN.ERRORS.EMAIL_REQUIRED') Email field is required
-            div(ng-message='pattern')
-              span(translate='LOGIN.ERRORS.EMAIL_MUST_VALID') Email must be a valid e-mail address
+              span(translate='LOGIN.ERRORS.username_REQUIRED') username field is required
         
         md-input-container.md-block(md-no-float='')
           input(type='password', name='password', ng-model='vm.form.password', placeholder='Password', translate='', translate-attr-placeholder='LOGIN.PASSWORD', required='')
