--- a/src/app/toolbar/layouts/horizontal-navigation/toolbar.html
+++ b/src/app/toolbar/layouts/horizontal-navigation/toolbar.html
@@ -9,8 +9,8 @@
         </div>
 
         <div class="logo" layout="row" layout-align="start center">
-            <span class="logo-image">F</span>
-            <span class="logo-text">FUSE</span>
+            <span class="logo-image"></span>
+            <span class="logo-text">作业云</span>
         </div>
 
         <md-progress-circular id="toolbar-progress" ng-if="$root.loadingProgress" class="md-accent"
