--- a/src/app/core/layouts/horizontal-navigation.html
+++ b/src/app/core/layouts/horizontal-navigation.html
@@ -1,6 +1,6 @@
 <div id="layout-horizontal-navigation" class="template-layout" layout="column" flex>
 
-    <md-toolbar id="toolbar" class="md-menu-toolbar" ui-view="toolbar"></md-toolbar>
+    <!-- <md-toolbar id="toolbar" class="md-menu-toolbar" ui-view="toolbar"></md-toolbar> -->
 
     <div id="horizontal-navigation" class="md-whiteframe-1dp" ui-view="navigation"></div>
 
