--- a/src/app/index.sass
+++ b/src/app/index.sass
@@ -11,15 +11,15 @@
  */
 // injector
 // endinjector
-#zzy-teacher-web 
+#my-achievements-web
   #splash-screen .logo
-    width: 400px 
-    height: 250px 
-    background: url(/assets/images/logos/zzy.png)  center / 100%   no-repeat 
-    box-shadow: none 
+    width: 400px
+    height: 250px
+    background: url(/assets/images/logos/zzy-small.png)  center / 60%   no-repeat
+    box-shadow: none
 
   .logo-image
-    background: url(/assets/images/logos/zzy-small.png) center / 32px 19px no-repeat !important
+    background: url(/assets/images/logos/zzy-small.png) center / 30px 19px no-repeat !important
 
   #login .logo
     background: url(/assets/images/logos/zzy-small-black-eye.png) center / 128px 76px no-repeat !important
