--- a/src/app/core/directives/ms-navigation/templates/vertical.html
+++ b/src/app/core/directives/ms-navigation/templates/vertical.html
@@ -9,8 +9,9 @@
 
     <div ms-navigation-item layout="row" ng-if="!vm.isHidden()">
 
-        <div class="ms-navigation-button" ng-if="!node.uisref && node.title">
+        <div class="ms-navigation-button" ng-if="!node.uisref && node.title"  ng-click="node.event()">
             <i class="icon s16 {{node.icon}}" ng-if="node.icon"></i>
+            <img md-menu-align-target class="avatar margin-right-12" ng-src="{{node.image}}" ng-if='node.image'>
             <span class="title" translate="{{node.translate}}" flex>{{node.title}}</span>
             <span class="badge white-fg" ng-style="{'background': node.badge.color}" ng-if="node.badge">{{node.badge.content}}</span>
             <i class="icon-chevron-right s16 arrow" ng-if="vm.collapsable && vm.hasChildren"></i>
@@ -19,6 +20,7 @@
         <a class="ms-navigation-button" ui-sref="{{node.uisref}}" ui-sref-active="active md-accent-bg"
            ng-if="node.uisref && node.title">
             <i class="icon s16 {{node.icon}}" ng-if="node.icon"></i>
+            <img md-menu-align-target class="avatar margin-right-12" ng-src="{{node.image}}" ng-if='node.image'>
             <span class="title" translate="{{node.translate}}" flex>{{node.title}}</span>
             <span class="badge white-fg" ng-style="{'background': node.badge.color}" ng-if="node.badge">{{node.badge.content}}</span>
             <i class="icon-chevron-right s16 arrow" ng-if="vm.collapsable && vm.hasChildren"></i>
