before role permission

--- a/src/app/main/errors/error-404.jade
+++ b/src/app/main/errors/error-404.jade
@@ -1,6 +1,6 @@
 #error-404(layout="column" layout-align="center center")
     .content(layout="column" layout-align="center center")
         .error-code 404
-        .message Sorry but we couldn’t find the page you are looking for
+        .message 找不到页面
 
-        a.back-link.md-accent-color(href="/" ) Go back to dashboard
+        a.back-link.md-accent-color.mt-24(href="/" ) 返回首页
