finish stu-hw-card style

--- a/src/app/main/student/homework-dashboard/directives/stu-hw-chart/stu-hw-chart.scss
+++ b/src/app/main/student/homework-dashboard/directives/stu-hw-chart/stu-hw-chart.scss
@@ -1,7 +1,7 @@
-#scoreChart .c3-line-score {
-  stroke-width: 3px;
+#score-chart .c3-line-score {
+  stroke-width: 2px;
 }
 
-#rankChart .c3-line-rank {
-  stroke-width: 3px;
+#rank-chart .c3-line-rank {
+  stroke-width: 2px;
 }
