--- a/src/app/main/directives/ma-rank-table/ma-rank-table.jade
+++ b/src/app/main/directives/ma-rank-table/ma-rank-table.jade
@@ -15,8 +15,8 @@ div.p-12(flex="100")
       div(flex="25" layout="row" layout-align="center") 得分
     
     md-list-item.border-bottom.hoverable.ph-6.pointer(layout="row" layout-align="space-between center" ng-repeat="item in vm.rankList | startFrom:vm.pagination.currentPage * vm.pagination.pageSize | limitTo: vm.pagination.pageSize track by $index ")
-        div(flex="20" layout="row" layout-align="center" ng-class="top-{{$index+1}}") {{$index+1}}
-        div(flex="30" layout="row" layout-align="center") {{item.reviewee.fullname}}
+        div(flex="20" layout="row" layout-align="center") {{$index+1}}
+        div.font-weight-600(flex="30" layout="row" layout-align="center") {{item.reviewee.fullname}}
         div(flex="25" layout="row" layout-align="center") {{item.group}}
         div(flex="25" layout="row" layout-align="center") {{item.score}}
       
